switch to vanilla net/http and Chi router
