# blog/routers.go
@@ -1,0 +1,26 @@
+package blog
+
+import (
+	"database/sql"
+	"net/http"
+
+	"github.com/go-chi/chi/v5"
+	"github.com/go-chi/chi/v5/middleware"
+)
+
+func NewRouter(db *sql.DB) *chi.Mux {
+	r := chi.NewRouter()
+	// r.Use(middleware.RequestID)
+	r.Use(middleware.Logger)
+	r.Use(middleware.Recoverer)
+
+	env := GenerateEnv(db)
+
+	r.Get("/", func(w http.ResponseWriter, r *http.Request) {
+		w.Write([]byte("hello world"))
+	})
+
+	r.Get("/posts", env.PostsGet)
+
+	return r
+}
